# llm_oncotrackinator

./: .gitignore  README.md  TESTING.md  environment.yml  pyproject.toml  requirements.txt
examples/: basic_usage.py  full_pipeline.py  sample_data.csv  single_patient_tracking.py  test_imports.py
src/llm_oncotrackinator/: __init__.py  config.py  data_loader.py  lesion_extractor.py  models.py  output.py  tracker.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_integration.py  test_lesion_extractor.py  test_llm_mocked.py  test_llm_real.py  test_models.py  test_output.py  test_tracker.py
